Put everything together + fixed layout issues

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -209,7 +209,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-transform: uppercase;
     white-space: nowrap;
     text-align: center;
@@ -309,6 +309,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -553,7 +554,8 @@ a {
 /* Callouts */
 .callout {
     padding: 4rem;
-    border-radius: 5px;
+    bottom: -30rem;
+    z-index: 1;
 }
 
 .callout--primary {
@@ -577,6 +579,18 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+    .callout {
+        border-radius: 5px;
+        position: absolute;
+        left: 3rem;
+        right: 3rem;
+        bottom: -10rem;
+    }
+
+    .callout-container {
+    position: relative;
+    }
+    
     .callout .grid--1x2 {
         grid-template-columns: 1fr auto;
     }
@@ -722,7 +736,7 @@ a {
         opacity: 1;
     }
 
-    .nav__items {
+    .nav__item {
         border: 0;
     }
 }
@@ -759,8 +773,9 @@ a {
 }
 
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
@@ -783,6 +798,13 @@ a {
 .block-plans .card {
     max-width: 500px;
     margin: 0 auto;
+}
+
+/* Testimonial Block */
+@media screen and (min-width: 768px) {
+    .block--testimonial {
+        padding-bottom: 20rem;
+    }
 }
 
 /* Features */
@@ -810,8 +832,6 @@ a {
 }
 
 /* Showcase Block */
-
-
 .block-showcase__image > img{
     width: 100%;
 }
@@ -868,8 +888,13 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+    .footer {
+        padding-top: 8rem;
+    }
+    
     .footer__sections {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+        margin-top: 90px;
     }
 
     .footer__section .list {
